# reformers-dt-metagenerator

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: create-and-publish-container-image.yml
metagenerator/: labels.py  manifest.py  render.py
metagenerator/cli/: generator.py  metagenerator.py
metagenerator/templates/: generator.sh.j2  metagenerator.sh.j2
tests/: test_labels.py  test_manifest.py  test_manifest.yml  test_render.py
